--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello there, awesome person!
+
+<html>
+    <body>
+        The HTML content goes here.
+    </body>
+</html>
+
+You may notice two copies of the HTML tag, and two copies of the body tag. We call these the _opening_ and _closing_ tags. Let's look at the same code, but include a little explanation.
+
+* `<html>` is the opening HTML tag
+* `<body>` is the opening body tag
+* `</body>` is the closing body tag
+* `</html>` is the closing HTML tag
