--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <head>
     <title>I am a title!</title>
 </head>
 <html>
     <body>
         The HTML content goes here.
+        <h1>I'm a header 1!</h1>
     </body>
 </html>
 
