img src, and advanced changes
`added image links https://avatars1.githubusercontent.com/u/47545722?v=4`

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 
 <head>
     <title>I am a title!</title>
+    <img></img>
 </head>
 <html>
     <body>
+        <src https://avatars1.githubusercontent.com/u/47545722?v=4`</src>
         The HTML content goes here.
         <h1>I'm a header 1!</h1>
+        
+        		<img src="https://octodex.github.com/images/vinyltocat.png">
+		<img src="https://https://avatars1.githubusercontent.com/u/47545722?v=4">
+		
+<ol>		
+<li>GitHub</li><a href="www.gitHub.com> </a>
+<li>GAAssembly</li><a href="www.generalassembly.com> </a>
+    <li>faceBook</la> <a href="www.facebook.com> </a>
+    <li>IG</li> <a href="www.instagram.com> </a>
+</ol>
     </body>
 </html>
 
