a.hover style messages created
hover messages created

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 		<img src="https://https://avatars1.githubusercontent.com/u/47545722?v=4">
 		
 <ol>		
-<li>GitHub</li><a href="www.gitHub.com> </a>
-<li>GAAssembly</li><a href="www.generalassembly.com> </a>
-    <li>faceBook</la> <a href="www.facebook.com> </a>
-    <li>IG</li> <a href="www.instagram.com> </a>
+<li>GitHub</li><a href="www.gitHub.com> </a><li><a href="https://github.com">This is a link to GitHub!</a></li>
+<li>GAAssembly</li><a href="www.generalassembly.com> </a><li>This is a link to GA!</a></li>
+    <li>faceBook</la> <a href="www.facebook.com> </a><li>This is a link to facebook!</a></li>
+    <li>IG</li> <a href="www.instagram.com> </a><li>This is a link to Instagram!</a></li>
 </ol>
 	
 <ul>
-  <li>espn</li> <a href="www.espn.com> </a>
-  <li>nba</li> <a href="www.nba.com> </a>
-  <li>mlb</li> <a href="www.mlb.com> </a>
+  <li>espn</li> <a href="www.espn.com> </a><li>This is a link to espn</a></li>
+  <li>nba</li> <a href="www.nba.com> </a><li>This is a link to NBA!</a></li>
+  <li>mlb</li> <a href="www.mlb.com> </a>This is a link to mlb!</a></li>
 </ul>
     </body>
 </html>
